k8s/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: tfm-ai-api
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
