k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfm-ai-api
  namespace: tfm-ai-api
  labels:
    app: tfm-ai-api
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: tfm-ai-api
