k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tfm-ai-api-http
  namespace: tfm-ai-api
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`fabio-api.helmcode.com`)
      kind: Rule
      services:
        - name: tfm-ai-api
          port: 8000
      middlewares:
        - name: https-redirect

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tfm-ai-api-https
  namespace: tfm-ai-api
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fabio-api.helmcode.com`)
      kind: Rule
      services:
        - name: tfm-ai-api
          port: 8000
  tls:
    certResolver: letsencrypt
